--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,20 @@
-site_name: My Docs
+site_name: Relic Seekers Documentation
+extra:
+  analytics:
+    provider: google
+    property: G-RF1W1204MN
+repo_url: https://github.com/Tomko-Code/Relic-Seekers
+repo_name: Relic Seekers
 theme:
   name: material
+  
+  features:
+    - navigation.instant
+    - navigation.instant.prefetch
+    - navigation.tracking
+    - navigation.tabs
+    - navigation.tabs.sticky
+    - toc.integrate
   palette: 
 
     # Palette toggle for light mode
