--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="builds/Windows/build_0.5/build_normal_v-0.5.exe"
+export_path="builds/Windows/build_0.5.1/build_normal_v-0.5.1.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -32,7 +32,7 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon="res://assets/art/icons/icon_windos.ico"
+application/icon="res://assets/art/icons/icon.png"
 application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
